# ray-tracer

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  LICENSE  Makefile  README.md  default.nix  main.cpp  plot_points.gnuplot  scene.txt  vec.h  vec.hpp
cmake/: CppLint.cmake
include/glad/: glad.h
src/: arguments.cpp  arguments.hpp  color.cpp  color.hpp  display.cpp  display.hpp  glad.c  main.cpp  mat4x4.h  mat4x4.hpp  parallel_rendering.hpp  parallel_rendering_scene.hpp  plane.hpp  ppm.cpp  ppm.hpp  progress.hpp  rand_rendering.hpp  rand_rendering_scene.cpp  rand_rendering_scene.hpp  ray.cpp  ray.hpp  rendering_scene.cpp  rendering_scene.hpp  row_marching.hpp  row_tracing.hpp  scene.cpp  scene.hpp  seq_rendering_scene.cpp  seq_rendering_scene.hpp  shader.frag  shader.vert  shuffled_rows.hpp  sphere.cpp  sphere.hpp  sprite_display.cpp  sprite_display.hpp  texture_display.cpp  texture_display.hpp  triangle.cpp  triangle.hpp  (+4 more)
